# clipsync-rs

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: app.rs  clipboard.rs  main.rs  network.rs  types.rs
