[package]
name = "clipsync-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow"] }
tokio = { version = "1.0", features = ["full"] }
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4"] }
if-addrs = "0.13.4"
log = "0.4.27"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
